Added Cowboys content

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <body>
 
     <!-- A header tag and element -->
-    <h1>This is an Awesome header</h1>
+    <h1>The Cowboys will take the bowl this year</h1>
 
     <!-- Use classes to identify unique-ish elements -->
-    <h2 class="header-alt">Another header</h2>
-    <h3 class="header-alt">Sub header</h3>
+    <h2 class="header-alt">I really mean it</h2>
+    <h3 class="header-alt">Like really</h3>
 
     <!-- Use an ID to identify actual unique elements -->
     <h4 id="header-primary">This is an h4</h4>
