--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.css">
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main2.css">
 
   </head>
 
